--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-# Compiled class file
+# Compiled Files
 *.class
+bin/
+build/
+/bin1/
+java/build/**
 
 # Log file
 *.log
@@ -22,3 +26,20 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Eclipse
+.classpath
+.project
+.settings/
+
+# Intellij
+.idea/
+*.iml
+*.iws
+
+# Maven
+log/
+target/
+
+# Inclusions
+!lib/**
